# somechats

./: .gitignore  Cargo.toml  Database.toml  README.md  Rocket.toml  build.rs
cert/: MyCertificate.crt  MyKey.key
sql/: auth-user.suql  chat.suql  check-chat.suql  check-reg.suql  create-user.suql  get-chats.suql  get-friends.suql  get-search.suql  reject-friend.suql  rm-friend.suql  rm-notice.suql  set-chat.suql  set-friend.suql  set-notice.suql  user-data.suql
src/: components.rs  main.rs
src/modules/: auth.rs  gets.rs  home.rs  sets.rs  test.rs
static/: asset-manifest.json
static/auth/: main.8c1a9472.css  main.8c1a9472.css.map  (+2 more)
templates/: index.html.hbs
webchat-auth/: package-lock.json  package.json  webpack.config.js
webchat-home/: package-lock.json  package.json
webchat.db/: 014553.sst  014572.sst  014585.sst  CURRENT  IDENTITY  LOG  LOG.old.1683278537596988  LOG.old.1683472399457456  LOG.old.1683574921626174  LOG.old.1683657974447072  LOG.old.1683710319549087  LOG.old.1683712711438098  LOG.old.1683823284212609  LOG.old.1683823778284252  LOG.old.1683823926192031  LOG.old.1683823936472045  LOG.old.1683824020987011  LOG.old.1683824086292037  LOG.old.1683824116619406  LOG.old.1683824256593155  LOG.old.1683824485067522  LOG.old.1683824513996053  LOG.old.1683828670652574  LOG.old.1683916462940116  LOG.old.1683916528552428  LOG.old.1683916530011963  LOG.old.1683916538553056  LOG.old.1690621644217481  LOG.old.1690621646733657  LOG.old.1690621670571067  LOG.old.1690621671495075  LOG.old.1690621709004639  LOG.old.1690621720298925  LOG.old.1690621721106847  MANIFEST-014599
websocket-chat/: Cargo.toml
websocket-chat/src/: lib.rs
(+20 files in other folders)
