[package]
name = "somechats"
version = "0.1.0"
edition = "2021"
publish = false

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.20.1", features = ["rt-multi-thread", "full"] }
rocket = { version = "0.5.0-rc.3", features = ["secrets", "tls", "json", "http2", "uuid"] }
websocket-chat = {path = "./websocket-chat"}
pwhash = "1.0.0"
serde = "1.0.44"
serde_json = "1.0.85"
rand = "0.8.5"
strsim = "0.10.0"
rsa = "0.8.1"
pkcs8 = { version = "0.9.0", features = ["encryption"] }
rocket-client-addr = "0.5.2"
base64 = "0.21.0"
tokio-util = "0.7.7"
surrealdb = { version = "1.0.0-beta.9", features = ["protocol-http"] }
static-files = "0.2.3"

[build-dependencies]
static-files = "0.2.3"

[profile.dev]
opt-level = 3


[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.3"
features = ["handlebars", "tera"]

